@@ -1,4 +1,5 @@
 v.0.5
+	Unset Delete functionality
 	Multilingual functionality
 	Title functionality for each photo with quick edit.
 	#3 - Generate thumbnails for existing images.
